// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`English render 1`] = `
<div>
  <div
    class="_linkOuterWrapper_6c6071 "
  >
    <a
      data-testid="v2/en/test_atlas"
      href="/v2/en/test_atlas"
    >
      <div
        class="_linkInnerWrapper_6c6071"
      >
        <div
          class="_linkImageWrapper_6c6071"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%271160%27%20height=%27740%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="atlas photo"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
        <div
          class="_linkText_6c6071"
        >
          <div
            class="_linkDateContainer_6c6071 "
          >
            <div
              class="_outerCircle_6c6071"
            >
              <div
                class="_innerDot_6c6071"
              />
            </div>
            Published 
            <strong
              class="_date_6c6071"
            >
              October 13 2014
            </strong>
          </div>
          <div
            class="_linkTitle_6c6071"
          >
            Testatlas 2
          </div>
          <div
            class="_linkIngress_6c6071"
          >
            <p>
              Lorem lipsum dolor 2
            </p>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`Norsk render 1`] = `
<div>
  <div
    class="_linkOuterWrapper_6c6071 "
  >
    <a
      data-testid="v2/test_atlas"
      href="/v2/test_atlas"
    >
      <div
        class="_linkInnerWrapper_6c6071"
      >
        <div
          class="_linkImageWrapper_6c6071"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%271160%27%20height=%27740%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="atlas photo"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
        <div
          class="_linkText_6c6071"
        >
          <div
            class="_linkDateContainer_6c6071 "
          >
            <div
              class="_outerCircle_6c6071"
            >
              <div
                class="_innerDot_6c6071"
              />
            </div>
            Publisert:
            <strong
              class="_date_6c6071"
            >
              13.10.2014
            </strong>
          </div>
          <div
            class="_linkTitle_6c6071"
          >
            Testatlas 1
          </div>
          <div
            class="_linkIngress_6c6071"
          >
            <p>
              Lorem lipsum dolor 1
            </p>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`Wide is true 1`] = `
<div>
  <div
    class="_linkOuterWrapper_6c6071 _wide_6c6071"
  >
    <a
      data-testid=""
      href="/"
    >
      <div
        class="_linkInnerWrapper_6c6071"
      >
        <div
          class="_linkImageWrapper_6c6071"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%271160%27%20height=%27740%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="atlas photo"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
        <div
          class="_linkText_6c6071"
        >
          <div
            class="_linkDateContainer_6c6071 "
          >
            <div
              class="_outerCircle_6c6071"
            >
              <div
                class="_innerDot_6c6071"
              />
            </div>
            Publisert:
            <strong
              class="_date_6c6071"
            >
              13.10.2014
            </strong>
          </div>
          <div
            class="_linkTitle_6c6071"
          />
          <div
            class="_linkIngress_6c6071"
          >
            <p />
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`newlyUpdated is true 1`] = `
<div>
  <div
    class="_linkOuterWrapper_6c6071 "
  >
    <a
      data-testid=""
      href="/"
    >
      <div
        class="_linkInnerWrapper_6c6071"
      >
        <div
          class="_linkImageWrapper_6c6071"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%271160%27%20height=%27740%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="atlas photo"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
        <div
          class="_linkText_6c6071"
        >
          <div
            class="_linkDateContainer_6c6071 _newlyUpdated_6c6071"
          >
            <div
              class="_outerCircle_6c6071"
            >
              <div
                class="_innerDot_6c6071"
              />
            </div>
            Publisert:
            <strong
              class="_date_6c6071"
            >
              13.10.2014
            </strong>
          </div>
          <div
            class="_linkTitle_6c6071"
          />
          <div
            class="_linkIngress_6c6071"
          >
            <p />
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;
